--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="uk-background-muted">
 <head>
   <meta charset="utf-8">
   <title>AuthenticationPage</title>
