--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="uk-background-muted">
+<html lang="en" style="background-color: black">
 <head>
   <meta charset="utf-8">
   <title>AuthenticationPage</title>
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <script src="https://apis.google.com/js/platform.js"></script>
 </head>
 <body>
   <app-root></app-root>
